fixing navbar margin issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,16 @@ a {
 
 .glassmorphism {
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.867);
+  background: rgba(255, 255, 255, 0.9);
+  /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.764); */
+}
+
+.glassmorphism2 {
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.523);
   /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
